--- a/.github/workflows/ipa-generation.yml
+++ b/.github/workflows/ipa-generation.yml
@@ -1,4 +1,4 @@
-name: Build Flutter iOS IPA
+name: Diagnose iOS IPA Build - Profile Resolution
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build_ios:
+  diagnose_ios:
     runs-on: macos-latest
 
     steps:
@@ -27,9 +27,8 @@ jobs:
           security set-keychain-settings -lut 21600 "$RUNNER_TEMP/temp.keychain-db"
           security unlock-keychain -p "$KEYCHAIN_PASSWORD" "$RUNNER_TEMP/temp.keychain-db"
           security default-keychain -s "$RUNNER_TEMP/temp.keychain-db"
-          security list-keychains -d user -s "$RUNNER_TEMP/temp.keychain-db"
 
-      - name: Import Apple certificate into keychain
+      - name: Import Apple certificate
         env:
           IOS_CERTIFICATE_PASSWORD: ${{ secrets.IOS_CERTIFICATE_PASSWORD }}
           IOS_CERTIFICATE_BASE64: ${{ secrets.IOS_CERTIFICATE_BASE64 }}
@@ -40,26 +39,38 @@ jobs:
           security set-key-partition-list -S apple-tool:,apple:,codesign: -s -k "$KEYCHAIN_PASSWORD" "$RUNNER_TEMP/temp.keychain-db"
           security find-identity -v -p codesigning "$RUNNER_TEMP/temp.keychain-db"
 
-      - name: Install provisioning profile
+      - name: Install provisioning profile with UUID
         env:
           IOS_PROVISIONING_PROFILE_BASE64: ${{ secrets.IOS_PROVISIONING_PROFILE_BASE64 }}
         run: |
           mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
-          echo "$IOS_PROVISIONING_PROFILE_BASE64" | base64 --decode > ~/Library/MobileDevice/Provisioning\ Profiles/profile.mobileprovision
+          echo "$IOS_PROVISIONING_PROFILE_BASE64" | base64 --decode > ~/Library/MobileDevice/Provisioning\ Profiles/8a1b1294-3776-43ca-96ea-92eede62d283.mobileprovision
+          ls -l ~/Library/MobileDevice/Provisioning\ Profiles/
+          security cms -D -i ~/Library/MobileDevice/Provisioning\ Profiles/8a1b1294-3776-43ca-96ea-92eede62d283.mobileprovision > profile_details.plist
+          cat profile_details.plist | grep -A 1 "TeamIdentifier\|BundleIdentifier"
 
-      - name: Get Flutter dependencies
-        run: flutter pub get
+      - name: Remove CocoaPods include from Release.xcconfig
+        run: |
+          cd ios/Flutter
+          sed -i '' '/#include "Pods\/Target Support Files\/Pods-Runner\/Pods-Runner.release.xcconfig"/d' Release.xcconfig
+          cat Release.xcconfig
 
-      - name: List Xcode Schemes
+      - name: Verify Xcode build settings
         run: |
           cd ios
-          xcodebuild -list
+          xcodebuild -project Runner.xcodeproj -target Runner -configuration Release -showBuildSettings > build_settings.txt
+          grep -E "PROVISIONING_PROFILE|PRODUCT_BUNDLE_IDENTIFIER|DEVELOPMENT_TEAM" build_settings.txt
 
-      - name: Build IPA
-        run: flutter build ipa --release --export-options-plist=ios/ExportOptions.plist --verbose
+      - name: Attempt to build IPA with verbose logging
+        run: |
+          flutter build ipa --release --export-options-plist=ios/ExportOptions.plist --verbose > build_log.txt 2>&1
+        continue-on-error: true
 
-      - name: Upload IPA artifact
+      - name: Upload build logs
         uses: actions/upload-artifact@v4
         with:
-          name: ios-ipa
-          path: build/ios/ipa/*.ipa
+          name: build-logs
+          path: |
+            build_log.txt
+            ios/build_settings.txt
+            ~/Library/MobileDevice/Provisioning\ Profiles/profile_details.plist
