--- a/ios/ExportOptions.plist
+++ b/ios/ExportOptions.plist
@@ -9,7 +9,7 @@
     <key>provisioningProfiles</key>
     <dict>
         <key>com.tech4dev.mathJoyPracticeEnglish</key>
-        <string>My MathEnglish App App Store Distribution</string>
+        <string>MathJoyAppStore2025</string>
     </dict>
 </dict>
 </plist>
