--- a/.github/workflows/ipa-generation.yml
+++ b/.github/workflows/ipa-generation.yml
@@ -19,6 +19,11 @@ jobs:
           flutter-version: '3.29.3'
           channel: 'stable'
 
+      - name: Run flutter pub get
+        run: |
+          flutter pub get
+          ls -l ios/Flutter/ # Verify Generated.xcconfig exists
+
       - name: Create temporary keychain
         env:
           KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
@@ -51,13 +56,19 @@ jobs:
       - name: Install CocoaPods dependencies
         run: |
           cd ios
-          pod install
+          pod install --repo-update || echo "Pod install failed, continuing..."
           cd ..
-
 
       - name: Build IPA
         run: |
-          flutter build ipa --release --export-options-plist=ios/ExportOptions.plist --verbose
+          flutter build ipa --release --export-options-plist=ios/ExportOptions.plist --verbose > build_log.txt 2>&1
+        continue-on-error: true
+
+      - name: Upload build log
+        uses: actions/upload-artifact@v4
+        with:
+          name: build-log
+          path: build_log.txt
 
       - name: Upload IPA
         uses: actions/upload-artifact@v4
