--- a/.github/workflows/ipa-generation.yml
+++ b/.github/workflows/ipa-generation.yml
@@ -1,4 +1,4 @@
-name: Build iOS IPA
+name: Test iOS Signing
 
 on:
   push:
@@ -6,23 +6,11 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  test-signing:
     runs-on: macos-latest
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-
-      - name: Set up Flutter
-        uses: subosito/flutter-action@v2
-        with:
-          flutter-version: '3.29.3'
-          channel: 'stable'
-
-      - name: Run flutter pub get
-        run: |
-          flutter pub get
-          ls -l ios/Flutter/ # Verify Generated.xcconfig exists
 
       - name: Create temporary keychain
         env:
@@ -50,41 +38,17 @@ jobs:
         run: |
           echo "$IOS_PROVISIONING_PROFILE_BASE64" | base64 --decode > profile.mobileprovision
           mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
-          UUID=$(grep -a -o -m 1 '[-A-F0-9]\{36\}' profile.mobileprovision)
-          cp profile.mobileprovision ~/Library/MobileDevice/Provisioning\ Profiles/$UUID.mobileprovision
+          cp profile.mobileprovision ~/Library/MobileDevice/Provisioning\ Profiles/7e2e5608-7c77-45ff-ac95-b86f868dff8c.mobileprovision
           ls -l ~/Library/MobileDevice/Provisioning\ Profiles/
 
-      - name: Install CocoaPods dependencies
+      - name: Test Xcode signing
         run: |
           cd ios
-          pod install --repo-update || echo "Pod install failed, continuing..."
-          cd ..
-
-      - name: Build IPA with xcodebuild
-        run: |
-          cd ios
-          xcodebuild -scheme Runner \
-            -archivePath build/ios/archive/Runner.xcarchive \
-            -sdk iphoneos \
-            -configuration Release \
-            CODE_SIGN_IDENTITY="Apple Distribution: Alireza Ehiaei (AHVM2Z8TDL)" \
-            PROVISIONING_PROFILE_SPECIFIER="My MathEnglish App App Store Distribution"
-            || exit 1
-          xcodebuild -exportArchive \
-            -archivePath build/ios/archive/Runner.xcarchive \
-            -exportPath build/ios/ipa \
-            -exportOptionsPlist ExportOptions.plist \
-            || exit 1
-          cd ..
+          xcodebuild -project Runner.xcodeproj -scheme Runner -configuration Release -destination generic/platform=iOS clean build CODE_SIGN_IDENTITY="Apple Distribution: Alireza Ehiaei (AHVM2Z8TDL)" PROVISIONING_PROFILE="7e2e5608-7c77-45ff-ac95-b86f868dff8c" > xcodebuild_log.txt 2>&1
+        continue-on-error: true
 
       - name: Upload build log
         uses: actions/upload-artifact@v4
         with:
-          name: build-log
-          path: build_log.txt
-
-      - name: Upload IPA
-        uses: actions/upload-artifact@v4
-        with:
-          name: app-ipa
-          path: build/ios/ipa/*.ipa
+          name: xcodebuild-log
+          path: ios/xcodebuild_log.txt
