Update ExportOptions.plist to use iPhone Distribution

--- a/ios/ExportOptions.plist
+++ b/ios/ExportOptions.plist
@@ -10,6 +10,6 @@
         <string>MathJoyAppStore2025</string>
     </dict>
     <key>signingCertificate</key>
-    <string>Apple Distribution: Alireza Ehiaei (AHVM2Z8TDL)</string>
+    <string>iPhone Distribution: Alireza Ehiaei (AHVM2Z8TDL)</string>
 </dict>
 </plist>
