--- a/.github/workflows/build-ios.yml
+++ b/.github/workflows/build-ios.yml
@@ -1,4 +1,4 @@
-name: Build iOS IPA
+name: Upload iOS IPA to App Store Connect
 
 on:
   push:
@@ -6,22 +6,21 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  upload:
     runs-on: macos-latest
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Flutter
-        uses: subosito/flutter-action@v2
+      - name: Set up Ruby for Fastlane
+        uses: ruby/setup-ruby@v1
         with:
-          flutter-version: '3.29.3'
-          channel: 'stable'
-          architecture: arm64
+          ruby-version: '3.2'
+          bundler-cache: true
 
-      - name: Install dependencies
-        run: flutter pub get
+      - name: Install Fastlane
+        run: gem install fastlane
 
       - name: Create temporary keychain
         env:
@@ -50,30 +49,38 @@ jobs:
           echo "$IOS_PROVISIONING_PROFILE_BASE64" | base64 --decode > profile.mobileprovision
           mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
           cp profile.mobileprovision ~/Library/MobileDevice/Provisioning\ Profiles/7e2e5608-7c77-45ff-ac95-b86f868dff8c.mobileprovision
-          ls -l ~/Library/MobileDevice/Provisioning\ Profiles/
 
-      - name: Install CocoaPods dependencies
+      - name: Set up Fastlane configuration
         run: |
-          cd ios
-          pod install --repo-update
-          cd ..
+          mkdir -p fastlane
+          cat > fastlane/Fastfile << EOL
+          default_platform(:ios)
 
-      - name: Build IPA
-        run: |
-          flutter build ipa --release --export-options-plist=ios/ExportOptions.plist --verbose > build_log.txt 2>&1
-          ls -l build/ios/ipa/ || echo "IPA directory not found"
-          cat ios/Runner.xcodeproj/project.pbxproj | grep -E "PROVISIONING_PROFILE|CODE_SIGN_IDENTITY"
+          platform :ios do
+            lane :upload_to_app_store_connect do
+              app_store_connect_api_key(
+                key_id: "${{ secrets.APP_STORE_CONNECT_KEY_ID }}",
+                issuer_id: "${{ secrets.APP_STORE_CONNECT_ISSUER_ID }}",
+                key_content: "${{ secrets.APP_STORE_CONNECT_KEY_CONTENT }}",
+                is_key_content_base64: true
+              )
+              deliver(
+                ipa: "app-ipa/math_joy_practice_english.ipa",
+                skip_screenshots: true,
+                skip_metadata: true,
+                skip_app_version_update: true,
+                force: true
+              )
+            end
+          end
+          EOL
+
+      - name: Run Fastlane to upload IPA
+        run: fastlane ios upload_to_app_store_connect
 
       - name: Upload build log
         if: always()
         uses: actions/upload-artifact@v4
         with:
           name: build-log
-          path: build_log.txt
-
-      - name: Upload IPA
-        if: success()
-        uses: actions/upload-artifact@v4
-        with:
-          name: app-ipa
-          path: build/ios/ipa/*.ipa
+          path: fastlane/report.xml
