--- a/.github/workflows/build-ios.yml
+++ b/.github/workflows/build-ios.yml
@@ -1,8 +1,6 @@
 name: Build and Upload iOS IPA to App Store Connect
 
 on:
-  push:
-    branches: [main]
   workflow_dispatch:
 
 jobs:
@@ -98,7 +96,8 @@ jobs:
                 skip_screenshots: true,
                 skip_metadata: true,
                 skip_app_version_update: true,
-                force: true
+                force: true,
+                precheck_include_in_app_purchases: false
               )
             end
           end
